<resources>
    <string name="app_name">JurPizza</string>
    <string name="order_pizza">Zamów</string>
    <string name="track_order">Śledź zamówienie</string>
    <string name="main_screen_logo_desc">JurPizza Main Logo</string>
    <string name="pick_pizza">Menu</string>
    <string name="pick_beverage">Wybierz Napój</string>
    <string name="dummy_descr">DUMMY</string>
    <string name="how_much">Ile?</string>
    <string name="what">Co?</string>
    <string name="in_total">Razem:</string>
    <string name="amount">Ilość</string>
    <string name="order_details">Szczegóły</string>
    <string name="volume">Pojemność</string>
    <string name="for_how_much">Za ile?</string>
    <string name="where">Gdzie?</string>
    <string name="realisation_details">Szczegóły realizacji</string>
    <string name="status">Status</string>
    <string name="quantity">Ilość</string>
    <string name="sauce">Sos</string>
    <string name="size">Rozmiar</string>
    <string name="your_order">Twoje zamówienie</string>
    <string name="your_orders">Twoje zamówienia</string>
    <string name="your_addresses">Twoje adresy</string>
    <string name="no_orders">Brak zamówień ☹</string>
    <string name="address_info">Dane adresowe</string>
    <string name="town">Miejscowość</string>
    <string name="street">Ulica</string>
    <string name="house_and_flat_number">Numer domu i mieszkania</string>
    <string name="phone">Numer telefonu</string>
    <string name="payment">Płatność $$$</string>
    <string name="total_price">Do zapłaty\nw sumie się uzbierało…</string>
    <string name="payment_type">Wybierz metodę płatości</string>
    <string name="payment_on_delivery">Gotówką przy odbiorze</string>
    <string name="payment_transfer">Przez internet (Wylewy48)</string>
    <string name="order_placed">Dziękujemy\nza zamówienie!\njuż się za nie zabieramy 😉</string>
    <string name="go_home_you_are_drunk">Wróć do strony początkowej</string>
    <string name="add_to_basket">Dodaj do koszyka</string>
    <string name="add_address">Wprowadź adres</string>
    <string name="input_add_address">Dodaj adres</string>
    <string name="cancel_order">Anuluj zamówienie 😢</string>
    <string name="no_adresses">Brak adresów</string>
    <string name="identifier">Identyfikator</string>
    <string name="finalize_order">Podsumowanie</string>
    <string-array name="statuses">
        <item>Magiczny status którego nie powinieneś widzieć</item>
        <item>W realizacji</item>
        <item>Potwierdzone</item>
        <item>Odrzucone</item>
        <item>W dostawie</item>
        <item>Zakończone</item>
    </string-array>
    <string-array name="sauces">
        <item>brak</item>
        <item>keczup</item>
        <item>sos czosnkowy</item>
        <item>sos słodkie chili</item>
    </string-array>
    <string-array name="pizza_size">
        <item>32cm</item>
        <item>41cm   (+ 9)</item>
        <item>50cm   (+ 16)</item>
    </string-array>
    <string-array name="beverage_size">
        <item>200ml</item>
        <item>500ml   (+ 5)</item>
        <item>700ml   (+ 7)</item>
        <item>1000ml  (+ 10)</item>
    </string-array>
    <string-array name="towns">
        <item>Kraków</item>
        <item>Warszawa</item>
        <item>Helsinki</item>
    </string-array>
    <string-array name="quantity">
        <item>1 szt</item>
        <item>2 szt</item>
        <item>3 szt</item>
        <item>5 szt</item>
        <item>10 szt</item>
    </string-array>
</resources>
