<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <View
        android:id="@+id/green"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:background="@color/secondary"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.0625" />

    <View
        android:id="@+id/white"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:background="@color/accent"
        app:layout_constraintRight_toLeftOf="@+id/green"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.0625" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/white"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/order"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/main_button_bg"
            android:text="@string/order_pizza"
            android:theme="@style/HollowButton"
            app:layout_constraintEnd_toEndOf="@+id/activity_main_logo"
            app:layout_constraintStart_toStartOf="@+id/activity_main_logo"
            app:layout_constraintTop_toBottomOf="@+id/activity_main_logo" />

        <Button
            android:id="@+id/track"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/main_button_bg"
            android:text="@string/track_order"
            android:theme="@style/HollowButton"
            app:layout_constraintEnd_toEndOf="@+id/order"
            app:layout_constraintStart_toStartOf="@+id/order"
            app:layout_constraintTop_toBottomOf="@+id/order" />

        <Button
            android:id="@+id/add_address"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/main_button_bg"
            android:text="@string/add_address"
            android:theme="@style/HollowButton"
            app:layout_constraintEnd_toEndOf="@+id/track"
            app:layout_constraintStart_toStartOf="@+id/track"
            app:layout_constraintTop_toBottomOf="@+id/track" />

        <ImageView
            android:id="@+id/activity_main_logo"
            android:layout_width="273dp"
            android:layout_height="282dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/main_screen_logo_desc"
            android:src="@drawable/jur_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>