<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <View
        android:id="@+id/green"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:background="#78D175"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.0625" />

    <View
        android:id="@+id/white"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:background="#F0F0F0"
        app:layout_constraintRight_toLeftOf="@+id/green"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.0625" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/white"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/order2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/main_button_bg"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/payment_on_delivery"
            android:theme="@style/HollowButton"
            app:layout_constraintEnd_toEndOf="@+id/payment_text"
            app:layout_constraintStart_toStartOf="@+id/payment_text"
            app:layout_constraintTop_toBottomOf="@+id/payment_pick_method_text" />

        <Button
            android:id="@+id/order3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/main_button_bg"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/payment_transfer"
            android:theme="@style/HollowButton"
            app:layout_constraintEnd_toEndOf="@+id/order2"
            app:layout_constraintStart_toStartOf="@+id/order2"
            app:layout_constraintTop_toBottomOf="@+id/order2" />

        <TextView
            android:id="@+id/payment_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/payment"
            android:theme="@style/InfoText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/payment_town"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/total_price"
            android:theme="@style/InfoTextSmall"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payment_header" />

        <TextView
            android:id="@+id/payment_pick_method_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/payment_type"
            android:theme="@style/InfoTextSmall"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payment_text" />

        <TextView
            android:id="@+id/payment_text"
            android:layout_width="320dp"
            android:layout_height="64dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/white_rounded_rect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payment_town">

        </TextView>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/dummy_descr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/cashregister" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/dummy_descr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order3"
            app:srcCompat="@mipmap/cashusd" />

    </android.support.constraint.ConstraintLayout>

    <View
        android:id="@+id/wylewy48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/wylewy48"
        android:visibility="gone" />

</android.support.constraint.ConstraintLayout>