<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <View
        android:id="@+id/green"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:background="@color/secondary"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.0625" />

    <View
        android:id="@+id/white"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:background="@color/accent"
        app:layout_constraintRight_toLeftOf="@+id/green"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.0625" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/white"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/track"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="156dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/main_button_bg"
            android:maxWidth="480dp"
            android:padding="8dp"
            android:text="@string/track_order"
            android:textAllCaps="false"
            android:textColor="#F0F0F0"
            android:theme="@style/InfoTextSmall"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/main_button_bg"
            android:padding="8dp"
            android:text="@string/go_home_you_are_drunk"
            android:textAllCaps="false"
            android:textColor="#F0F0F0"
            android:theme="@style/InfoTextSmall"
            app:layout_constraintEnd_toEndOf="@+id/track"
            app:layout_constraintStart_toStartOf="@+id/track"
            app:layout_constraintTop_toBottomOf="@+id/track" />

        <ImageView
            android:id="@+id/activity_main_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/main_screen_logo_desc"
            android:src="@mipmap/jur_logo_mini"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/order_placed"
            android:theme="@style/InfoTextSmall"
            app:layout_constraintBottom_toTopOf="@+id/track"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_main_logo" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>