<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <View
        android:id="@+id/green"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:background="#78D175"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.0625" />

    <View
        android:id="@+id/white"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:background="#F0F0F0"
        app:layout_constraintRight_toLeftOf="@+id/green"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.0625" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/white"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/str_pick_pizza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/your_order"
            android:theme="@style/InfoText"
            app:layout_constraintBottom_toBottomOf="@+id/basket_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/basket_image" />

        <ImageButton
            android:id="@+id/basket_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/dummy_descr"
            android:src="@drawable/basket_raster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/basket_preview_price"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:text="@string/how_much"
            android:theme="@style/InfoTextSmall"
            app:layout_constraintStart_toStartOf="@+id/basket_preview_item_prices"
            app:layout_constraintTop_toBottomOf="@+id/basket_image" />

        <TextView
            android:id="@+id/basket_preview_what2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/what"
            android:theme="@style/InfoTextSmall"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/basket_image" />

        <TextView
            android:id="@+id/basket_preview_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/in_total"
            android:theme="@style/InfoTextSmall"
            app:layout_constraintBottom_toTopOf="@+id/basket_preview_finalize"
            app:layout_constraintEnd_toStartOf="@+id/basket_preview_total_price_number"
            app:layout_constraintTop_toTopOf="@+id/basket_preview_total_price_number" />

        <View
            android:id="@+id/basket_preview_item_prices"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/white_rounded_rect"
            app:layout_constraintBottom_toBottomOf="@+id/basket_preview_items"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/basket_preview_items"
            app:layout_constraintTop_toTopOf="@+id/basket_preview_items" />

        <View
            android:id="@+id/basket_preview_items"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/white_rounded_rect"
            app:layout_constraintBottom_toTopOf="@+id/basket_preview_total_price_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/basket_preview_price"
            app:layout_constraintWidth_percent="0.65" />

        <ListView
            android:id="@+id/basket_preview_scroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/basket_preview_items"
            app:layout_constraintEnd_toEndOf="@+id/basket_preview_item_prices"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/basket_preview_items"
            app:layout_constraintTop_toTopOf="@+id/basket_preview_items"
            tools:listitem="@layout/basket_preview_item">

        </ListView>

        <TextView
            android:id="@+id/basket_preview_total_price_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/dummy_descr"
            android:theme="@style/InfoTextSmall"
            app:layout_constraintBottom_toTopOf="@+id/basket_preview_finalize"
            app:layout_constraintEnd_toEndOf="@+id/basket_preview_scroll" />

        <Button
            android:id="@+id/basket_preview_finalize"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/main_button_bg"
            android:text="@string/finalize_order"
            android:theme="@style/HollowButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/basket_preview_scroll"
            app:layout_constraintStart_toStartOf="@+id/basket_preview_scroll" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>