<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <View
        android:id="@+id/green"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:background="#78D175"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.0625" />

    <View
        android:id="@+id/white"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:background="#F0F0F0"
        app:layout_constraintRight_toLeftOf="@+id/green"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.0625" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/white"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/details_beverage_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/amount"
            android:theme="@style/InfoTextSmall"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_beverage_spinner_wrapper2" />

        <RelativeLayout
            android:id="@+id/details_beverage_spinner_wrapper1"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/white_rounded_rect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_beverage_amount">

            <Spinner
                android:id="@+id/details_beverage_spinner1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>

        <View
            android:id="@+id/details_beverage_box"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/white_rounded_rect"
            android:maxWidth="320dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_beverage_header" />

        <TextView
            android:id="@+id/details_beverage_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/dummy_descr"
            android:textColor="@color/darkText"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/details_beverage_box"
            app:layout_constraintStart_toStartOf="@+id/details_beverage_box"
            app:layout_constraintTop_toTopOf="@+id/details_beverage_box" />

        <TextView
            android:id="@+id/details_beverage_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/order_details"
            android:theme="@style/InfoText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/details_beverage_glass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/dummy_descr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_beverage_box"
            android:src="@drawable/colddrink_glass" />

        <TextView
            android:id="@+id/details_beverage_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/volume"
            android:theme="@style/InfoTextSmall"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_beverage_glass" />

        <RelativeLayout
            android:id="@+id/details_beverage_spinner_wrapper2"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/white_rounded_rect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_beverage_size">

            <Spinner
                android:id="@+id/details_beverage_spinner2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>

        <TextView
            android:id="@+id/details_beverage_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/dummy_descr"
            android:theme="@style/InfoTextSmall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_beverage_spinner_wrapper1" />

        <Button
            android:id="@+id/details_beverage_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/main_button_bg"
            android:padding="8dp"
            android:text="@string/add_to_basket"
            android:textAllCaps="false"
            android:textColor="#F0F0F0"
            android:theme="@style/InfoTextSmall"
            app:layout_constraintEnd_toEndOf="@+id/details_beverage_spinner_wrapper1"
            app:layout_constraintStart_toStartOf="@+id/details_beverage_spinner_wrapper1"
            app:layout_constraintTop_toBottomOf="@+id/details_beverage_price" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>